Add zenexity current job

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
 
         <h4>Know my interests and achievements</h4>
 		
-		<p>I have worked as product architect at <a href="http://www.obeo.fr">Obeo</a>. In 4 years we created an <a href="http://mariot-thoughts.blogspot.com/search/label/Viewpoint">innovative modeling workbench</a>, contributing significantly to open-source.
-		  Previously, I notably worked at <a href="http://www.zurich.ibm.com/">IBM Zurich Research Laboratory</a> on data access enhancement for wireless sensor networks with <a href="http://www.mqtt.org"> MQTT</a> and at the <a href="http://www.ifa.gr">French Institute of Athens</a> on several communication actions.<br/>
+		<p>I am currently working at <a href="http://www.zenexity.com/">Zenexity</a>. Previously, I have worked as product architect at <a href="http://www.obeo.fr">Obeo</a>. In 4 years we created an <a href="http://mariot-thoughts.blogspot.com/search/label/Viewpoint">innovative modeling workbench</a>, contributing significantly to open-source.
+		  Before, I notably worked at <a href="http://www.zurich.ibm.com/">IBM Zurich Research Laboratory</a> on data access enhancement for wireless sensor networks with <a href="http://www.mqtt.org"> MQTT</a> and at the <a href="http://www.ifa.gr">French Institute of Athens</a> on several communication actions.<br/>
 		 </p>
 		 <p>I have graduated both <a href="http://www.telecom-lille1.eu">Telecom Lille 1</a>, an engineering <i>grande ecole</i>, and <a href="http://www.lifl.fr/?languageId=1">LIFL</a>, the Computer Science Laboratory of Lille.
 		</p>
