Add a link to my blog
Display an eye candy link to my blog

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <body class="fr">
     <div class="content">
       <div class="header">
+        <a class="blog" href="http://blog.mchv.me"></a>
         <h1>Mariot Chauvin</h1>
         <h2>Innovation focused</h2>
       </div>      
