--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
         <div class="row">
           <div class="text">
             <h2>What I am doing</h2>
-            <p>I am currently working at <a href="http://www.zenexity.com/">Zenexity</a>, where I help enterprises to design and build highly scalable and available information systems. Those information systems are based on web oriented architecture concepts which use web standards as the middleware and promote simplicity and agility.
+            <p>I was currently looking for a position in London area.</p>
+            <p>I was previously working at <a href="http://www.zengularity.com/">Zengularity</a>, where I helped enterprises to design and build highly scalable and available information systems. Those information systems are based on web oriented architecture concepts which use web standards as the middleware and promote simplicity and agility.
             </p>
           </div>
           <div class="border-box">
