--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!--<img src="logo2.png" />-->
         <span class="me">Mariot Chauvin</span>
         <span class="menu">
-          <a href="http://blog.mchv.me">Blog</a>
+
         </span>
     </div>
     <div class="indicator">
@@ -40,7 +40,7 @@
         <div class="row">
           <div class="text">
             <h2>What I am doing</h2>
-            <p>I was currently looking for a position in London area.</p>
+            <p>I am currently looking for a position in London area.</p>
             <p>I was previously working at <a href="http://www.zengularity.com/">Zengularity</a>, where I helped enterprises to design and build highly scalable and available information systems. Those information systems are based on web oriented architecture concepts which use web standards as the middleware and promote simplicity and agility.
             </p>
           </div>
@@ -61,8 +61,9 @@
           </div>
         </div>     
       <div class="links">
-        <a class="twitter-link" href="http://www.twitter.com/mchv">Twitter</a> /
-        <a class="linkedin-link" href="http://www.linkedin.com/in/mariotchauvin">LinkedIn</a> / 
+      	<a href="http://blog.mchv.me">Blog</a>
+        <a class="twitter-link" href="http://www.twitter.com/mchv">Twitter</a> 
+        <a class="linkedin-link" href="http://www.linkedin.com/in/mariotchauvin">LinkedIn</a>  
         <a class="github-link" href="http://github.com/mchv">Github</a>
       </div>
 
