add viewport meta tag

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="utf-8">
   <meta name="author" content="Mariot Chauvin">
   <meta name="keywords" content="Mariot Chauvin">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="Shortcut Icon" href="" type="image/x-icon">
   <link type="text/css" href="assets/css/normalize.css" rel="stylesheet"/>
   <link type="text/css" href="assets/css/main.css" rel="stylesheet"/>
