--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <meta name="keywords" content="Mariot Chauvin">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="Shortcut Icon" href="" type="image/x-icon">
+  <link rel="apple-touch-icon" sizes="180x180" href="/assets/img/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
   <link type="text/css" href="assets/css/normalize.css" rel="stylesheet"/>
   <link type="text/css" href="assets/css/main.css" rel="stylesheet"/>
   <link type="text/css" rel="stylesheet" href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,400italic"/>
